# R-Type

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_UPDATE.md  Makefile  README.md  g_test.sh  mkdocs.yml
src/client/: CMakeLists.txt  RTypeClient.cpp  RTypeClient.hpp
src/client/error/: Error.cpp  Error.hpp  ErrorMessages.hpp
src/client/include/client/: RTypeClient.hpp
src/client/include/client/audio/: AudioManager.hpp  SoundEffect.hpp
src/client/include/client/core/: Client.hpp  RTypeClient.hpp
src/client/include/client/input/: InputMapper.hpp
src/client/include/client/menu/: ClientMenu.hpp
src/client/include/client/network/: ClientNetworkManager.hpp  NetworkManager.hpp  PacketHandler.hpp  ServerConnection.hpp
src/client/include/client/rendering/: ParticleSystem.hpp
src/client/include/client/ui/: HUD.hpp  Menu.hpp  UIManager.hpp
src/client/include/client/utils/: ClientUtils.hpp
src/client/src/: RTypeClient.cpp  main.cpp
src/client/src/menu/: ClientMenu.cpp
src/client/src/network/: ClientNetworkManager.cpp
src/client/src/utils/: ClientUtils.cpp
src/common/: CMakeLists.txt
src/common/include/common/constants/: defines.hpp
src/common/include/common/error/: Error.hpp  ErrorMessages.hpp
src/common/include/common/game/: EntityTypes.hpp  GameConstants.hpp  PowerupTypes.hpp  WeaponTypes.hpp
src/common/include/common/logger/: LogLevel.hpp  Logger.hpp  Settings.hpp
src/common/include/common/network/: NetworkConfig.hpp  NetworkManager.hpp  NetworkTypes.hpp
src/common/include/common/protocol/: Packet.hpp  PacketHeader.hpp  PacketManager.hpp  PacketTypes.hpp  Payload.hpp  Protocol.hpp  Serialization.hpp
src/common/src/: Error.cpp
src/common/src/logger/: Logger.cpp
src/common/src/network/sockets/: ASocket.cpp  AsioSocket.cpp
src/common/src/protocol/: Packet.cpp  PacketManager.cpp
src/engine/: CMakeLists.txt
src/engine/include/engine/: GameEngine.hpp
src/engine/include/engine/audio/: AudioManager.hpp  AudioStorage.hpp
src/engine/include/engine/core/: Math.hpp  Time.hpp  Transform.hpp
src/engine/include/engine/ecs/: Component.hpp  Coordinator.hpp  Signature.hpp  System.hpp
src/engine/include/engine/gameEngine/: GameEngine.hpp
src/engine/include/engine/physics/: Collision.hpp  PhysicsSystem.hpp
src/engine/include/engine/render/: FontStorage.hpp  RenderManager.hpp  TextureStorage.hpp
src/engine/include/engine/utils/: Logger.hpp  Random.hpp  Settings.hpp
src/engine/src/: GameEngine.cpp  Logger.cpp  SystemManager.cpp  gameEngine.cpp
src/engine/src/ecs/: System.cpp
src/engine/src/engine/audio/: AudioManager.cpp
src/engine/src/engine/render/: RenderManager.cpp
src/game/: CMakeLists.txt
src/game/include/game/: Game.hpp
src/game/include/game/coordinator/: Coordinator.hpp
src/game/include/game/core/: GameState.hpp
src/game/include/game/game/: EntityInterpolation.hpp  GameWorld.hpp  Prediction.hpp
src/game/include/game/input/: InputManager.hpp
src/game/include/game/menu/: IMenu.hpp
src/game/include/game/rendering/: Renderer.hpp  (+2 more)
src/game/src/: Game.cpp
src/game/src/coordinator/: Coordinator.cpp
src/game/src/systems/: AISystem.cpp  AccessibilitySystem.cpp  AnimationSystem.cpp  AudioSystem.cpp  BackgroundSystem.cpp  BoundarySystem.cpp  ButtonSystem.cpp  CollisionSystem.cpp  DestroySystem.cpp  LevelSystem.cpp  LevelTimerSystem.cpp  LifetimeSystem.cpp  MovementSystem.cpp  PlayerDeadSystem.cpp  PlayerSystem.cpp  RebindSystem.cpp  RenderSystem.cpp  ScoreSystem.cpp  ShootSystem.cpp
src/game/src/utils/: ClientUtils.cpp
src/logger/: CMakeLists.txt
src/logger/include/logger/: Logger.hpp
src/logger/src/: Logger.cpp
src/server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
src/server/network/: Network.cpp  Network.hpp  NetworkAsio.cpp
src/server/protocol/: Protocol.hpp  protocol.hpp
src/server/session/: Session.cpp  Session.hpp
src/server/src/: Network.cpp  Server.cpp  Session.cpp  main.cpp
src/server/src/network/: ServerNetworkManager.cpp
src/server/utils/: test_client.cpp
tests/: CMakeLists.txt  Error_messages_test.cpp  LoggerTest.cpp  test_component_manager.cpp  test_debug.cpp  test_entity.cpp  test_entity_manager.cpp  test_game_engine.cpp  test_system_manager.cpp
tests/client/: ClientUtilsTestStubs.cpp  ClientUtilsTestStubs.hpp  Error_messages_test.cpp  TestClientMenu.cpp  TestClientNetworkManager.cpp  TestClientNetworkManagerImpl.cpp  TestClientUtils.cpp  TestRTypeClient.cpp  TestRTypeClientImpl.cpp
tests/common/: TestASocket.cpp  TestAsioSocket.cpp  TestPacket.cpp
tests/engine/: LoggerTest.cpp  TestAnimationSystem.cpp  TestAudioSystem.cpp  TestBackgroundSystem.cpp  TestCollisionSystem.cpp  TestComponentManager.cpp  TestComponents.cpp  TestCoordinator.cpp  TestEntity.cpp  TestEntityManager.cpp  TestEntityManagerCoverage.cpp  TestFontStorage.cpp  TestGameEngine.cpp  TestLevelSystemCoverage.cpp  TestLevelTimerSystem.cpp  TestPlayerSystemCoverage.cpp  TestRenderManagerCoverage.cpp  TestRenderSystemCoverage.cpp  TestShootSystemCoverage.cpp  TestSystemManager.cpp  TestTextureStorage.cpp
tests/engine/audio/: TestAudioManager.cpp  TestAudioStorage.cpp
tests/engine/coordinator/network/: TestNetworkManagerAssert.cpp  TestNetworkManagerCreate.cpp  TestNetworkManagers.cpp  TestPacketManagerAssert.cpp  TestPacketManagerCreateCoverage.cpp  TestProcessPacket.cpp
tests/engine/gameEngine/coordinator/: TestCoordinator.cpp
tests/game/: TestAccessibilitySystemCoverage.cpp  TestAnimationSystemCoverage.cpp  TestAudioSystemCoverage.cpp  TestBackgroundSystemCoverage.cpp  TestButtonSystemCoverage.cpp  TestClientUtils.cpp  TestClientUtilsCoverage.cpp  TestClientUtilsUI.cpp  TestGame.cpp  TestGameCoverage.cpp  TestGameInlineFunctions.cpp  TestIMenu.cpp  standalone_game_inline_test.cpp
tests/stubs/SFML/: Graphics.hpp
tests/stubs/common/error/: Error.hpp
tests/stubs/common/logger/: Logger.hpp
tests/stubs/common/protocol/: Packet.hpp  PacketManager.hpp  Protocol.hpp
tests/stubs/engine/: GameEngine.hpp
tests/stubs/game/coordinator/: Coordinator.hpp
tests/stubs/spdlog/: spdlog.h
(+196 files in other folders)
